Remover comentarios. Corregir la plantilla de HTML